--- a/introduce_company.html
+++ b/introduce_company.html
@@ -31,17 +31,51 @@
 
     <div id="header">
         <video muted autoplay loop>
-            <source class="vid" src="https://static.bunjang.co.kr/official/Brand_15_720P.mp4" type="video/mp4">
+            <source class="vid" src="https://bgzt.co.kr/assets/video/about_desktop.mp4">
         </video>
     </div>
 
     <div class="intro_main">
+        
         <div class="intro_title_box">
-            <div class="intro_title"></div>
-            <div class="intro_comment"></div>
+            <div class="intro_title">
+                취향 기반 중고거래 플랫폼 번개장터
+            </div>
+            <div class="intro_comment">
+                2011년 런칭 이래로 연간 거래액 1조 3천억 원, 서비스 가입자 수 1,500만, 개인 간 거래 1000만 건을 돌파하며 꾸준히 성장하고 있습니다.
+            </div>
         </div>
-        <div class="intro_history"></div>
-
+       
+        <div class="intro_history">
+            <div class="year">
+                2011 1월 주식회사 퀵켓 설립 번개장터 서비스 런칭
+            </div>
+            <div class="year">
+                2013 11월 네이버 계열사 편입
+            </div>
+            <div class="year">
+                2016 12월연간 손익 BEP달성
+            </div>
+            <div class="year">
+                2017 8월 네이버 계열사 분리 독립 <br>10월 퀵켓 → 번개장터 사명변경
+            </div>
+            <div class="year">
+                2018 3월 업계 최초 에스크로 기반 안전결제 서비스 '번개페이' 런칭
+            </div>
+            <div class="year">
+                2019 7월 빅데이터 전문 스타트업 ‘부스트’ 인수 <br>10월 1,000만 가입자 돌파 <br>12월 연간 거래액 1조원 돌파
+            </div>
+            <div class="year">
+                2020 3월 560억 신규 투자 유치 <br>10월 스니커즈 커뮤니티’ 풋셀’ 인수 <br>12월 세컨핸드 의류 셀렉트샵 '마켓인유', '착한텔레콤' 중고폰 사업, <br>중고 골프용품 거래 플랫폼 '에스브릿지' 인수
+            </div>
+            <div class="year">
+                2021 2월 국내 최대 한정판 스니커즈 컬렉션 'BGZT Lab' 오픈 <br>6월 업계 최초 ISMS(정보보호관리체계) 인증 획득 <br>10월 'BGZT Lab by 번개장터 2호점' 오픈 <br>11월 명품 컨셉의 'BGZT Collection by 번개장터' 오픈
+            </div>
+            <div class="year">
+                2022 1월 820억 투자 유치
+            </div>
+        </div>
+   
     </div>
     <script type="text/javascript" src="./introduce_company.js"></script>
 </body>
