--- a/introduce_company.html
+++ b/introduce_company.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./introduce_company.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+        .intro_title_box.fixed{position:fixed; top:200px;}
     </style>
 </head>
 <body onload="chkSize(event)" onscroll="info_headerToggle()">
@@ -48,34 +49,173 @@
        
         <div class="intro_history">
             <div class="year">
-                2011 1월 주식회사 퀵켓 설립 번개장터 서비스 런칭
+                <p>&#128205;</p>
+                <b>2011</b>
+                <ul>
+                    <li><strong>1월</strong> 주식회사 퀵켓 설립 번개장터 서비스 런칭</li>
+                </ul> 
             </div>
             <div class="year">
-                2013 11월 네이버 계열사 편입
+                <p>&#128205;</p>
+                <b>2013</b>
+                <ul>
+                    <li><strong>11월</strong> 네이버 계열사 편입</li>
+                </ul> 
             </div>
             <div class="year">
-                2016 12월연간 손익 BEP달성
+                <p>&#128205;</p>
+                <b>2016</b> 
+                <ul>
+                    <li><strong>12월</strong> 연간 손익 BEP달성</li>
+                </ul>
+            </div> 
+            <div class="year">
+                <p>&#128205;</p>
+                <b>2017</b>
+                <ul>
+                    <li><strong>8월</strong> 네이버 계열사 분리 독립</li>
+                    <li><strong>10월</strong> 퀵켓 → 번개장터 사명변경</li>
+                </ul>
             </div>
             <div class="year">
-                2017 8월 네이버 계열사 분리 독립 <br>10월 퀵켓 → 번개장터 사명변경
+                <p>&#128205;</p>
+                <b>2018</b>
+                <ul>
+                    <li><strong>3월</strong> 업계 최초 에스크로 기반 안전결제 서비스 '번개페이' 런칭</li>
+                </ul> 
             </div>
             <div class="year">
-                2018 3월 업계 최초 에스크로 기반 안전결제 서비스 '번개페이' 런칭
+                <p>&#128205;</p>
+                <b>2019</b>
+                <ul>
+                    <li><strong>7월</strong> 빅데이터 전문 스타트업 ‘부스트’ 인수</li>
+                    <li><strong>10월</strong> 1,000만 가입자 돌파</li>
+                    <li><strong>12월</strong> 연간 거래액 1조원 돌파</li>
+                </ul>   
             </div>
             <div class="year">
-                2019 7월 빅데이터 전문 스타트업 ‘부스트’ 인수 <br>10월 1,000만 가입자 돌파 <br>12월 연간 거래액 1조원 돌파
+                <p>&#128205;</p>
+                <b>2020</b>
+                <ul>
+                    <li><strong>3월</strong> 560억 신규 투자 유치</li>
+                    <li><strong>10월</strong> 스니커즈 커뮤니티’ 풋셀’ 인수</li>
+                    <li><strong>12월</strong> 세컨핸드 의류 셀렉트샵 '마켓인유', '착한텔레콤' 중고폰 사업,</li>
+                    <li>중고 골프용품 거래 플랫폼 '에스브릿지' 인수</li>
+                </ul>   
             </div>
             <div class="year">
-                2020 3월 560억 신규 투자 유치 <br>10월 스니커즈 커뮤니티’ 풋셀’ 인수 <br>12월 세컨핸드 의류 셀렉트샵 '마켓인유', '착한텔레콤' 중고폰 사업, <br>중고 골프용품 거래 플랫폼 '에스브릿지' 인수
+                <p>&#128205;</p>
+                <b>2021</b>
+                <ul>
+                    <li><strong>2월</strong> 국내 최대 한정판 스니커즈 컬렉션 'BGZT Lab' 오픈</li>
+                    <li><strong>6월</strong> 업계 최초 ISMS(정보보호관리체계) 인증 획득</li>
+                    <li><strong>10월</strong> 'BGZT Lab by 번개장터 2호점' 오픈</li>
+                    <li><strong>11월</strong> 명품 컨셉의 'BGZT Collection by 번개장터' 오픈</li>
+                </ul>    
             </div>
             <div class="year">
-                2021 2월 국내 최대 한정판 스니커즈 컬렉션 'BGZT Lab' 오픈 <br>6월 업계 최초 ISMS(정보보호관리체계) 인증 획득 <br>10월 'BGZT Lab by 번개장터 2호점' 오픈 <br>11월 명품 컨셉의 'BGZT Collection by 번개장터' 오픈
-            </div>
-            <div class="year">
-                2022 1월 820억 투자 유치
+                <p>&#128205;</p>
+                <b>2022</b>
+                <ul>
+                    <li><strong>1월</strong> 820억 투자 유치</li>
+                </ul>
             </div>
         </div>
    
+    </div>
+
+    <div class="load_picture">
+        <div class="picture_box">
+
+        </div>
+    </div>
+    <div class="footer_comment_box">
+        <div class="footer_comment">
+            저마다의 취향이라는 세계 속에서<br>모두가 행복해질 수 있도록,
+        </div>
+        <div id="cmt2" class="footer_comment">
+            오늘도 번개장터는 더 쉽고 안전한<br>개인간 거래를 만들어갑니다.
+        </div>
+    </div>
+
+    <div class="story">
+        <div class="cmt">
+            번개장터 스토리
+        </div>
+    </div>
+    <div id="main">
+        <div class="main_wrap">
+            <div class="line">
+                <div class="section1">
+                    <div class="box">
+                        <div class="picture">
+                            <img src="https://media.bunjang.co.kr/images/nocrop/968645783.jpg">
+                        </div>
+                        <div class="comment">
+                            번개장터 '브그즈트 랩',신세계인터내셔날 '에스아이빌리지'
+                            입점...프리미엄 스니커즈 선보인다
+                        </div>
+                        <div class="plus_comment">
+                            패션 트렌드 세터들의 만남, 스니커즈로 통했다
+                        </div>
+                        <div class="source_comment">
+                            <font color="red">뉴스룸 | 보도자료</font> 2023.03.22
+                        </div>
+                    </div>
+                </div>
+                <div class="section2">
+                    <div class="box">
+                        <div class="picture">
+                            <img src="https://media.bunjang.co.kr/images/nocrop/968643719.jpg">
+                        </div>
+                        <div class="comment">
+                            번개장터, 브그즈트 랩 오픈 2년 만에 66만명 방문
+                        </div>
+                        <div class="plus_comment">
+                            스니커즈 문화의 모든 것을 만끽하는 MZ세대 핫플로 자리잡아
+                        </div>
+                        <div class="source_comment">
+                            <font color="red">뉴스룸 | 보도자료</font> 2023.03.06
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="line">
+                <div class="section1">
+                    <div class="box">
+                        <div class="picture">
+                            <img src="https://media.bunjang.co.kr/images/nocrop/959126027.jpg">
+                        </div>
+                        <div class="comment">
+                            번개장터,'미래 중고 패션 트렌드 분석' 리포트 발표, 2023년 중고 패션
+                            트렌드 키워드 'M.U.S.E.' 선정
+                        </div>
+                        <div class="plus_comment">
+                            MZ세대가 선택한 패션 산업의 새로운 대면, '패션중고'
+                        </div>
+                        <div class="source_comment">
+                            <font color="red">뉴스룸 | 보도자료</font> 2023.02.27
+                        </div>
+                    </div>
+                </div>
+                <div class="section2">
+                    <div class="box">
+                        <div class="picture">
+                            <img src="https://media.bunjang.co.kr/images/nocrop/960195879.jpg">
+                        </div>
+                        <div class="comment">
+                            개인정보 처리방침 계정 안내
+                        </div>
+                        <div class="plus_comment">
+                            2023년 번개장터 개인정보 처리방침 개정을 안내드립니다.
+                        </div>
+                        <div class="source_comment">
+                            <font color="red">뉴스룸 | 공지사항</font> 2023.02.27
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script type="text/javascript" src="./introduce_company.js"></script>
 </body>
