--- a/introduce_company.html
+++ b/introduce_company.html
@@ -38,7 +38,7 @@
 
     <div class="intro_main">
         
-        <div class="intro_title_box">
+        <div id="title_box" class="intro_title_box">
             <div class="intro_title">
                 취향 기반 중고거래 플랫폼 번개장터
             </div>
@@ -126,7 +126,7 @@
 
     <div class="load_picture">
         <div class="picture_box">
-
+            <MARQUEE behavior="scroll"><img class="move_img" src="https://bgzt.co.kr/assets/image/infinite-scroll-desktop.png"></MARQUEE>
         </div>
     </div>
     <div class="footer_comment_box">
@@ -217,6 +217,77 @@
             </div>
         </div>
     </div>
+
+    <div class="footer_img">
+        <img src="https://bgzt.co.kr/assets/image/img_background_career.png">
+        <div class="img_text">
+            <p>번개장터에서<br>취향을 함께 이을 분들을 찾습니다.</p>
+        </div>
+        <button class="btn1">채용공고 보기</button>
+    </div>
+
+    <div id="categori">
+        <div class="wrap_categori">
+            <div class="categori_line">
+                <ul>
+                    <li><b>브랜드</b></li>
+                    <li>스토리</li>
+                    <li>인사이트</li>
+                    <li>소셜</li>
+                </ul>
+            </div>
+            <div class="categori_line">
+                <ul>
+                    <li><b>서비스</b></li>
+                    <li>중요 기능 소개</li>
+                   
+                </ul>
+            </div>
+            <div class="categori_line">
+                <ul>
+                    <li><b>팀</b></li>
+                    <li>Growth & Tech</li>
+                    <li>피플</li>
+                    <li>컬쳐</li>
+                </ul>
+            </div>
+            <div class="categori_line">
+                <ul>
+                    <li><b>뉴스룸</b></li>
+                    <li>보도자료</li>
+                    <li>공지사항</li>
+                </ul>
+            </div>
+            <div class="categori_line">
+                <ul>
+                    <li><b>문의</b></li>
+                    <li>사업 제휴 partner@bunjang.co.kr</li>
+                    <li>마케팅 제휴 brand@bunjang.co.kr</li>
+                    <li>PR pr@bunjang.co.kr</li>
+                    <li>프로상점 입점 proshop@bunjang.co.kr</li>
+                    <li>고객센터 1670-2910</li>
+                    <li>광고제휴</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div id="footer">
+        <ul>
+            <li>
+                <b>번개장터(주)</b> 개인정보처리방침 영상정보처리기기 운영 및 관리 방침
+            </li>
+            <li>
+                Copyright © Bungaejangter, Inc. All Right Reserved
+            </li>
+        </ul>
+        <div class="social_blank">
+            <div class="sns">네이버</div>
+            <div class="sns">인스타</div>
+            <div class="sns">유튜브</div>
+        </div>
+    </div>
+ 
     <script type="text/javascript" src="./introduce_company.js"></script>
 </body>
 </html>
