--- a/introduce_company.html
+++ b/introduce_company.html
@@ -20,12 +20,12 @@
         
             <div class="info_wrap">
                 <div id="info1" class="info">회사소개</div>
-                <div id="info2" class="info">브랜드</div>
+                <button type="button" onclick = "location.href='./brand.html'"><div id="info2" class="info">브랜드</div></button>
                 <div id="info3" class="info">서비스</div>
                 <div id="info4" class="info">팀</div>
                 <div id="info5" class="info">뉴스룸</div>
                 <div id="info6" class="info">인재영입</div>
-                <div id="info7" class="info">번개장터 써보기</div>
+                <button type="button" onclick="win_open('popup.html','a');"><div id="info7" class="info">번개장터 써보기</div></button>
             </div>
        </div>
     </div>
